Firmware/2-Optode-board/.metadata/.plugins/org.eclipse.cdt.ui/Simple _combined_central_MULT.build.log
10:08:51 **** Incremental Build of configuration Debug for project Simple _combined_central_MULT ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:233:4: error: too many arguments to function 'recieve_data_buffer_from_optode'
  233 |    recieve_data_buffer_from_optode(&hspi1, (uint8_t *)&aTxBuffer, (uint8_t *)&reading_buf , sizeof(reading_buf), HAL_MAX_DELAY);
      |    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:75:6: note: declared here
   75 | void recieve_data_buffer_from_optode(void);
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:236:15: warning: passing argument 1 of 'send_to_pc' makes integer from pointer without a cast [-Wint-conversion]
  236 |    send_to_pc(reading_buf);
      |               ^~~~~~~~~~~
      |               |
      |               uint16_t * {aka short unsigned int *}
../Core/Src/main.c:78:17: note: expected 'uint16_t' {aka 'short unsigned int'} but argument is of type 'uint16_t *' {aka 'short unsigned int *'}
   78 | void send_to_pc(uint16_t);
      |                 ^~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:573:6: error: conflicting types for 'recieve_data_buffer_from_optode'
  573 | void recieve_data_buffer_from_optode(SPI_HandleTypeDef *hspi, uint8_t *pTxData, uint8_t *pRxData, uint16_t Size,uint32_t Timeout){
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:75:6: note: previous declaration of 'recieve_data_buffer_from_optode' was here
   75 | void recieve_data_buffer_from_optode(void);
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

10:08:52 Build Failed. 3 errors, 1 warnings. (took 768ms)

